@@ -1,3 +1,8 @@
+2014-01-01  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mmg: enhancement: Made the »scanned files« list box sortable by
+        all columns. Fixes #954.
+
 2013-12-31  Moritz Bunkus  <moritz@bunkus.org>
 
         * mmg: enhancement: The »additional parts« dialog will now show
